# CS213_Assignment3_Sec35

./: .gitignore  BoardGame_Classes.h  CMakeLists.txt  CMakeLists.txt.txt  DiamondBoard.h  DiamondMinimaxPlayer.h  DiamondUI.h  Fancy_UI.h  FiveByFiveBoard.h  Four_in_a_row_Board.h  Four_in_a_row_Random_Player.h  Game_7_.h  Infinity.h  MemoryBoard.h  MemoryMinimaxPlayer.h  Memory_UI.h  MisereMinimaxPlayer.h  MisereTicTacToe.h  MisereUI.h  NumericalBoard.cpp  NumericalBoard.h  NumericalPlayer.cpp  NumericalPlayer.h  NumericalUI.cpp  NumericalUI.h  OBSTACLESBOARD.H  OBSTACLESUI.H  ORD_TicTacToe_UI.h  Pyramid.h  README.md  SUS_Board.h  SUS_UI.h  Tic-Tac-Toe.cpp  Tic-Tac-Toe.h  UltimateSmartPlayer.h  UltimateTicTacToe.h  Ultimate_UI.h  WordTicTacToe.h  Word_UI.h  Word_board.h  (+6 more)
project 3 oop/: project 3 oop.sln  project 3 oop.vcxproj  project 3 oop.vcxproj.filters
project 3 oop/project 3 oop/x64/Debug/: project 3 oop.exe.recipe  vc143.idb
project 3 oop/project 3 oop/x64/Debug/project 3 oop.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  project 3 oop.lastbuildstate
